[gd_scene load_steps=9 format=3 uid="uid://bcr58x6wplipv"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="1_m57v6"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="2_j5khg"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="3_wo0dk"]
[ext_resource type="Texture2D" uid="uid://d20qvy0tjs5g0" path="res://Assets/UI/heart_disabled.png" id="4_2jopb"]
[ext_resource type="Script" path="res://Entities/Player/UI.gd" id="4_el6co"]
[ext_resource type="Texture2D" uid="uid://bgvri7fei7b0x" path="res://Assets/UI/heart_enabled.png" id="5_lqic4"]

[sub_resource type="Resource" id="Resource_tp8fx"]
script = ExtResource("2_j5khg")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_kxw5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2jopb")
}],
"loop": true,
"name": &"disabled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_lqic4")
}],
"loop": true,
"name": &"enabled",
"speed": 5.0
}]

[node name="Camera" type="Node2D"]
script = ExtResource("1_m57v6")
follow_mode = 1
tween_resource = SubResource("Resource_tp8fx")
follow_damping = true
follow_damping_value = Vector2(0.05, 0.05)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_wo0dk")

[node name="UI" type="Node2D" parent="."]
script = ExtResource("4_el6co")

[node name="Health1" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-864, -448)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kxw5c")
animation = &"enabled"

[node name="Health2" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-800, -448)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kxw5c")
animation = &"enabled"

[node name="Health3" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-736, -448)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kxw5c")
animation = &"enabled"

[node name="Health4" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-672, -448)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kxw5c")
animation = &"enabled"

[node name="Health5" type="AnimatedSprite2D" parent="UI"]
position = Vector2(-608, -448)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_kxw5c")
animation = &"enabled"
